--- a/app/views/praxis_results/show.html.erb
+++ b/app/views/praxis_results/show.html.erb
@@ -35,40 +35,38 @@
 
     <tr>
       <th>Test Name</th>
-      <td><%= @test.TestCode %></td>
+      <td><%= @test.praxis_test_id %></td>
     </tr>
 
     <tr>
       <th>Test Date</th>
-      <td><%= @test.TestDate ?  @test.TestDate.strftime("%m/%d/%Y") : nil%></td>
+      <td><%= @test.test_date ?  @test.test_date.strftime("%m/%d/%Y") : nil%></td>
     </tr>
 
     <tr>
       <th>Registration Date</th>
-      <td><%= @test.RegDate ? @test.RegDate.strftime("%m/%d/%Y") : nil%></td>
+      <td><%= @test.reg_date ? @test.reg_date.strftime("%m/%d/%Y") : nil%></td>
     </tr>
 
     <tr>
       <th>Paid By</th>
-      <td><%= @test.PaidBy%></td>
+      <td><%= @test.paid_by%></td>
     </tr>
 
     <tr>
       <th>Score</th>
-      <td <%= (@test.TestScore and @test.TestScore >= @test.CutScore) ? nil : "class=bad_text" %>><%= @test.TestScore%></td>
+      <td <%= (@test.test_score and @test.test_score >= @test.cut_score) ? nil : "class=bad_text" %>><%= @test.test_score%></td>
     </tr>
 
     <tr>
       <th>Best Score as of Test Date</th>
-      <td><%= @test.BestScore%></td>
+      <td><%= @test.best_score%></td>
     </tr>
 
     <tr>
       <th>Cut Score</th>
-      <td><%= @test.CutScore%></td>
+      <td><%= @test.cut_score%></td>
     </tr>
-
-
 
   </table>
 
@@ -91,10 +89,10 @@
           </tr>
           <tr>
             <% @test.praxis_subtest_results.each do |sub| %>
-              <td> <%= sub.Name %></td>
-              <td class="<%= (sub.PtsEarned and sub.AvgLow and sub.PtsEarned < sub.AvgLow) ? "test-fail" : "test-pass" %>"> <%= sub.PtsEarned %></td>
-              <td> <%= sub.PtsAval %></td>
-              <td> <%= "#{sub.AvgLow}-#{sub.AvgHigh}"%></td>
+              <td> <%= sub.name %></td>
+              <td class="<%= (sub.pts_earned and sub.avg_low and sub.pts_earned < sub.avg_low) ? "test-fail" : "test-pass" %>"> <%= sub.pts_earned %></td>
+              <td> <%= sub.pts_aval %></td>
+              <td> <%= "#{sub.avg_low}-#{sub.avg_high}"%></td>
         </tr>
             <% end %>
         </table>
