--- a/app/views/praxis_results/index.html.erb
+++ b/app/views/praxis_results/index.html.erb
@@ -18,21 +18,19 @@
               <tr class="header">
                 <th>Test Name</th>
                 <th>Date Taken</th>
-                <th>Score</th>
-                <th>Best Score as of Test Date</th>      
-                <th>Cut Score</th>
               </tr>
               <% @tests.each do |result| %>
               <td><%= PraxisTest.find(result.praxis_test_id).TestName %></td>
               <td><%= result.test_date.strftime("%m/%d/%Y")%> </td>
-              <td><%= result.test_score %></td>
-              <td><%= result.best_score %></td>   
-              <td><%= result.cut_score %></td>
                <td class="actions">
                   <%= link_to praxis_result_path(result.AltID), class: "btn btn-info action-small issues" do %>
                       <span class="small-btn-text">Details</span>
   
                   <% end %>
+                  <%= link_to edit_praxis_result_path(result.AltID), class: "btn btn-info #{result.can_alter? ? "" : "disabled"}" do %>
+                      <span class="glyphicon glyphicon-pencil"></span>
+                  <% end %> 
+                  <%# link_to("Delete", "url" , :options) %>
               </tr>
   
               <% end %>
