--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -37,7 +37,7 @@
     
     
                     <!-- TODO grayed out button if no praxis results, issues -->
-                    <% if can? :read, PraxisResult %>
+                    <% if can? :index, PraxisResult %>
                       <%= link_to student_praxis_results_path(student.AltID),:class => "btn btn-info action-small praxis" + (student.praxis_results.size > 0 ? "" : " disabled") do %>
                               </br>
                               <span class="small-btn-text"> Praxis Results 
