fixes to praxis_results to pass tests

--- a/app/views/praxis_results/edit.html.erb
+++ b/app/views/praxis_results/edit.html.erb
@@ -1,5 +1,5 @@
 <!-- edit.html.erb -->
-<%= link_to students_path, class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+<%= link_to student_praxis_results_path(@test.student.AltID), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
   <i class=" link-text"> Back</i>
 <% end %>
 
