--- a/app/views/praxis_results/index.html.erb
+++ b/app/views/praxis_results/index.html.erb
@@ -31,7 +31,7 @@
                       <span class="glyphicon glyphicon-pencil"></span>
                   <% end %> 
 
-                 <%= link_to praxis_result_path(result.AltID), {class: "btn btn-info #{result.can_alter? ? "" : "disabled"}", method: :delete, data: {confirm: "Are you sure you want to delete this test?"}} do %>
+                 <%= button_to praxis_result_path(result.AltID), {class: "btn btn-info #{result.can_alter? ? "" : "disabled"}", method: :delete, data: {confirm: "Are you sure you want to delete this test?"}} do %>
                       <span class="glyphicon glyphicon-trash"></span>
                   <% end %> 
               </tr>
