--- a/app/views/issue_updates/index.html.erb
+++ b/app/views/issue_updates/index.html.erb
@@ -34,7 +34,7 @@
 
       <tr>
         <td><%=update.UpdateName%></td>
-        <td> <%=update.CreateDate.strftime("%m/%d/%Y")%> </td>
+        <td> <%=update.created_at.strftime("%m/%d/%Y")%> </td>
         <td class="actions">
 
           <%= render(partial: 'details_popover', 
