--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -16,7 +16,7 @@
 
   <tr>
     <th>Date Opened</th>
-    <td> <%= @issue.CreateDate.strftime("%m/%d/%Y")%></td>
+    <td> <%= @issue.created_at.strftime("%m/%d/%Y")%></td>
   </tr>
 
   <tr>
