--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
         
       <div class="col-xs-12 col-md-1 pull-right">      
         <%= link_to "/logout", :class => "btn btn-default" do %>
-          Log Out
+          Log Out!
         <% end %>
       </div>
                  
