reimplementation of adm_st#update removed bnum from dropdown allow user to specify term can admit student at any time (even if term has passed)

--- a/app/views/adm_st/new.html.erb
+++ b/app/views/adm_st/new.html.erb
@@ -16,8 +16,13 @@
 	    <%= error_messages_for(@app) %>
 
     <tr>
-      <th> <%= f.label(:Student_Bnum, "Name")%> </th>
-      <td> <%= f.select(:Student_Bnum, @students.map {|s| [name_details(s, file_as=true), s.Bnum]}, {:prompt => 'Select a name'}) %></td>
+      <th> <%= f.label(:student_id, "Name")%> </th>
+      <td> <%= f.select(:student_id, @students.map {|s| [name_details(s, file_as=true), s.id]}, {:prompt => 'Select a name'}) %></td>
+    </tr>
+
+    <tr>
+      <th> <%= f.label(:BannerTerm_BannerTerm, "Term")%> </th>
+      <td> <%= f.select(:BannerTerm_BannerTerm, @terms.map {|t| [t.readable, t.id]}, {:prompt => 'Select a term to apply'}) %></td>
     </tr>
 
   	<tr>
