changed to datepicker partial for adm_tep and adm_st

--- a/app/views/adm_st/edit.html.erb
+++ b/app/views/adm_st/edit.html.erb
@@ -26,12 +26,11 @@
             <td class="date-admit">
 
 
-            <%= render(:partial => 'date_picker', :locals => {
-                f: f,
-                field: :STAdmitDate,
-                default: ""
-            })  %>
-
+              <%= render(partial: 'date_picker', :locals => {
+                        f: f,
+                        field: :STAdmitDate,
+                        default: Date.today
+                      } )%> 
 
         </td>
 
