--- a/app/views/adm_tep/edit.html.erb
+++ b/app/views/adm_tep/edit.html.erb
@@ -19,18 +19,16 @@
 
 
         <tr>            
-        <th class="date-admit">
+        <th>
             <%= f.label(:TEPAdmitDate, "Admit Date") %></th>
 
-            <td class="date-admit">
-                <%= f.text_field :TEPAdmitDate, 'data-behaviour' => 'datepicker' %>
-            <script type="text/javascript">
-                $('[data-behaviour~=datepicker]').datepicker({
-                    format: 'mm/dd/yyyy',
-                    startDate: <%=@term.StartDate.strftime("%m/%d/%Y") %>,
-                    endDate: <%=@term.EndDate.strftime("%m/%d/%Y") %>
-                });
-            </script>
+            <td>
+
+            <%= render(partial: 'date_picker', :locals => {
+                f: f,
+                field: :TEPAdmitDate,
+                default: Date.today
+              } )%> 
             </td>
         
 
