--- a/app/views/adm_tep/edit.html.erb
+++ b/app/views/adm_tep/edit.html.erb
@@ -4,7 +4,7 @@
     
     <%= form_for(:adm_tep, :url => adm_tep_path(@application.id), method: :patch ) do |f| %>
 
-    <h2>Edit TEP Application for <%=[@first_name, @last_name].join(' ') + " (" + @term.PlainTerm + ")" %></h2>
+    <h2>Edit TEP Application for <%= "#{@application.student.name_readable} (#{@application.banner_term.readable})" %></h2>
     <%= error_messages_for(@application) %> 
 
     <table summary="adm_tep form fields">
