--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -31,7 +31,7 @@
   
                 <tr>
                   <td> <%= issue.Name %></td>
-                  <td> <%= issue.CreateDate.strftime("%m/%d/%Y")%> </td>
+                  <td> <%= issue.created_at.strftime("%m/%d/%Y")%> </td>
   
                   <td class="<%= issue.Open ? "bad_text" : "good_text" %>">
                     <!-- glyph here if open -->
