--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -34,7 +34,7 @@
 
     <tr>
       <th>Status in Program</th>
-      <td><%= @student.ProgStatus %> </td>
+      <td><%= @student.prog_status %> </td>
     </tr>
 
     <tr>
