--- a/app/views/adm_tep/index.html.erb
+++ b/app/views/adm_tep/index.html.erb
@@ -47,8 +47,8 @@
               <th>Admit Date</th>
               <th>Admission Decision</th>
               <th>Details</th>
-              <th>Delete</th>
               <th>Letter</th>
+              <th>Delete</th>
 
             </tr>
         	<% @applications.each do |app|%>
@@ -68,7 +68,7 @@
 
           <% end %>
 
-          </td>
+        </td>
         <td><%= app.TEPAdmitDate ? app.TEPAdmitDate.strftime("%m/%d/%Y") : nil%></td> 
 
   			<td class="actions">
@@ -91,29 +91,28 @@
         <td>
           <%= link_to("Details", adm_tep_path(app.id), :class => "action details btn btn-info action-small issues")%>
         </td>
+    
+        <td class="doc-download"> 
+          <% if app.student_file  %>
+              <%= link_to adm_tep_download_path(app.id), :class => "btn btn-default glyphicon glyphicon-file action-small" do %>
+            <% end %>
+            
+          <% end %>
+        </td>
+        
+        
         
         <td>
           
           <%= button_to(adm_tep_path(app.id), { class: "btn btn-default #{app.TEPAdmit==nil ? "" : "disabled" }", 
-          method: :delete, 
-          data: {confirm: "Are you sure you want to delete this application?"}} ) do %>
-                      <span class="glyphicon glyphicon-trash"></span>
-                  <% end %> 
+          method: :delete, data: {confirm: "Are you sure you want to delete this application?"}} ) do %>
+                  <span class="glyphicon glyphicon-trash" style="color:red"></span>
+          <% end %> 
           <!--Display button for deleting record
           # 1) Button in grey if decision has been made
           # 2) Button clickable if decision is nil-->
           
         </td>
-
-        <% if app.student_file  %>      
-        
-        <td class="doc-download"> 
-
-              <%= link_to adm_tep_download_path(app.id), :class => "btn btn-default glyphicon glyphicon-file action-small" do %>
-              <% end %>
-        </td>
-      
-        <% end %>
 
         </tr>
           <!-- end of if statement for content-->
