--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -74,7 +74,7 @@
                       <%= link_to issue_issue_updates_path(issue.IssueID), class: "btn btn-info action-small" do %>
                           <span class="small-btn-text"> Updates 
                             <span class="badge">
-                              <%=issue.issue_updates.size%> 
+                              <%=issue.issue_updates.visible.size%> 
                             </span>
                           </span>
                       <% end %>                             
