Added stylesheet glyphicon-trash color:red, added bad role test for destroy

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -91,6 +91,10 @@ Style for Glyphicons*/
   color: red;
 }
 
+.glyphicon-trash{
+  color:red;
+}
+
 /*h2, h3 {margin-left: 50px;
   color: black;
   }    /*page headers*/
