--- a/app/views/clinical_assignments/index.html.erb
+++ b/app/views/clinical_assignments/index.html.erb
@@ -52,7 +52,7 @@
           <td>
               <%= button_to(clinical_assignment_path(assignment.id), { class: "btn btn-default", method: :delete, 
                   data: {confirm: "Are you sure you want to delete this application?"}} ) do %>
-                 <span class="glyphicon glyphicon-trash" style="color:red"</span>
+                 <span class="glyphicon glyphicon-trash" </span>
               <% end %>
               
           </td>
