--- a/app/views/clinical_teachers/index.html.erb
+++ b/app/views/clinical_teachers/index.html.erb
@@ -56,7 +56,7 @@
           </td>
           <td>
              <%= link_to(clinical_teacher_delete_path(teacher.id), :class => "btn btn-default") do %>  
-                <span class="glyphicon glyphicon-trash" style="color:red"></span>
+                <span class="glyphicon glyphicon-trash" ></span>
              <% end %>         
           </td>
         </tr>
