Controller delete and destroy actions, delete index and controller test for should delete site and dependents

--- a/app/views/clinical_sites/index.html.erb
+++ b/app/views/clinical_sites/index.html.erb
@@ -57,7 +57,10 @@
                     <span class="badge"> <%= site.clinical_teachers.size%></span>
                   </span>
                 <% end %>
-
+                
+            <%= link_to(clinical_site_delete_path(site.id), :class => "btn btn-default") do %>  
+                <span class="glyphicon glyphicon-trash"></span>
+                <% end %>  
 
           </td>
         </tr>
