--- a/app/views/clinical_teachers/delete.html.erb
+++ b/app/views/clinical_teachers/delete.html.erb
@@ -12,8 +12,8 @@
 
     <div class="form-buttons">
         <td>
-            <%= button_to(clinical_teachers_path, { class: "btn btn-default", method: :delete}) do %>
-            <span style="color:red">Delete Teacher</span>
+            <%= button_to(clinical_teachers_path, { class: "btn btn-danger", method: :delete}) do %>
+            <span>Delete Teacher</span>
             <% end %>
         </td>
       
