created a delete button for issues and issue updates which make the entries invsible on deletion rather than destroying. Also created tests for deletion if authorized and if bad role

--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -74,7 +74,7 @@
                       <%= link_to issue_issue_updates_path(issue.IssueID), class: "btn btn-info action-small" do %>
                           <span class="small-btn-text"> Updates 
                             <span class="badge">
-                              <%=issue.issue_updates.visible.size%> 
+                              <%= issue.issue_updates.select{|u| u.visible}.size %> 
                             </span>
                           </span>
                       <% end %>                             
