created edit and index views. controller actions finished

--- a/app/views/assessments/index.html.erb
+++ b/app/views/assessments/index.html.erb
@@ -21,6 +21,7 @@
     <% @assessment.each do |assessment| %>
       <% if can? :read, assessment %>
         <td><%= assessment.name%></td>
+        <!-- <td><%#assessment.description %></td> -->
 
         <td class="actions">
 
