--- a/app/views/assessments/edit.html.erb
+++ b/app/views/assessments/edit.html.erb
@@ -2,7 +2,7 @@
   <i class=" link-text"> Back</i>
 <% end %>
 
-<%= form_for(@assessment, url: edit_assessment_path(@assessment.id)) do |f| %>
+<%= form_for(@assessment, url: assessment_path(@assessment.id)) do |f| %>
 
 	<table summary="assessment form fields">
     <h1> Edit Assessment </h1>
