--- a/app/views/assessments/new.html.erb
+++ b/app/views/assessments/new.html.erb
@@ -1,8 +1,8 @@
-<%= link_to assessment_index_path, class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+<%= link_to assessments_path, class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
   <i class=" link-text"> Back</i>
 <% end %>
 
-<%= form_for(@assessment, url: _path) do |f| %>
+<%= form_for(@assessment, url: assessments_path(@assessment.id)) do |f| %>
 
 	<table summary="Assessments form fields">
 
