--- a/app/views/assessments/delete.html.erb
+++ b/app/views/assessments/delete.html.erb
@@ -5,15 +5,14 @@
 <div class="Assessment Delete">
   <h2>Delete Assessment</h2>
 
-  <%= form_for(:clinical_teacher, :url => {:action => 'destroy', :id => @teacher.id}) do |f| %>
-    <p>Deleting this teacher will also delete all assignment records associated with them.</p>
-    <p><%= "Are you sure you want to permanently delete #{@teacher.FirstName + " " + @teacher.LastName}?"%> </p>
-    <p><%= "You will also delete this many assignments: #{@teacher.clinical_assignments.size}" %></p> 
+  <%= form_for(:assessment, :url => {:action => 'destroy', :id => @assessment.id}) do |f| %>
+    <p>Are you sure you want to delete this assessment?</p>
+    <p><%= @assessment.name %> </p>
 
     <div class="form-buttons">
         <td>
-            <%= button_to(clinical_teachers_path, { class: "btn btn-danger", method: :delete}) do %>
-            <span>Delete Teacher</span>
+            <%= button_to(assessment_path(@assessment.id), { class: "btn btn-danger", method: :delete}) do %>
+            <span>Delete Assessment</span>
             <% end %>
         </td>
       
