--- a/app/views/assessments/delete.html.erb
+++ b/app/views/assessments/delete.html.erb
@@ -8,14 +8,14 @@
   <%= form_for(:assessment, :url => {:action => 'destroy', :id => @assessment.id}) do |f| %>
     <p>Are you sure you want to delete this assessment?</p>
     <p><%= @assessment.name %> </p>
+    <p> <%= "You will also delete this many assessment versions: #{@assessment.assessment_versions.size}" %>
 
     <div class="form-buttons">
-        <td>
-            <%= button_to(assessment_path(@assessment.id), { class: "btn btn-danger", method: :delete}) do %>
+        <tr>
+          <%= button_to(assessment_path(@assessment.id), { class: "btn btn-danger", method: :delete}) do %>
             <span>Delete Assessment</span>
             <% end %>
-        </td>
-      
+	    </tr>
     </div>
 
   <% end %>
