finished concern_dashboard index with tests to match

--- a/app/views/concern_dashboard/index.html.erb
+++ b/app/views/concern_dashboard/index.html.erb
@@ -7,7 +7,7 @@
 <div class="container-fluid">
 
     <div class="row">
-      <% @concerns.each do |concern| %>
+      <% @concerns.each do |key, concern| %>
         <%= render(partial: 'concern', locals: concern) %>
       <% end %>
     </div>
